<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/blank"
        android:layout_width="match_parent"
        android:layout_height="29dp" />

    <TextView
        android:id="@+id/gameOver"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:fontFamily="@font/cabin"
        android:text="@string/game_over"
        android:textAlignment="center"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/congrats"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:fontFamily="@font/cabin"
        android:text="@string/congrats_all"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/clickOK"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:fontFamily="@font/cabin"
        android:text="@string/click_OK"
        android:textAlignment="center"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        app:srcCompat="@drawable/gemstone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"></LinearLayout>

</LinearLayout>