<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainMenuActivity">

    <Button
        android:id="@+id/newGame"
        android:layout_width="255dp"
        android:layout_height="65dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/cabin"
        android:text="@string/new_game"
        android:textAllCaps="false"
        android:textColor="@color/colorMainText"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/gameOptions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81" />

    <TextView
        android:id="@+id/gemSeekerMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/welcome_screen_msg"
        android:textColor="@color/colorMainText"
        android:textSize="80sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.013" />

    <Button
        android:id="@+id/gameOptions"
        android:layout_width="255dp"
        android:layout_height="65dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/cabin"
        android:text="@string/game_options"
        android:textAllCaps="false"
        android:textColor="@color/colorMainText"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />

    <ImageView
        android:id="@+id/gem_one"
        android:layout_width="145dp"
        android:layout_height="115dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.030"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.178"
        app:srcCompat="@drawable/gemstone" />

    <ImageView
        android:id="@+id/gem_two"
        android:layout_width="145dp"
        android:layout_height="115dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.179"
        app:srcCompat="@drawable/gemstone" />

    <Button
        android:id="@+id/gameHelp"
        android:layout_width="255dp"
        android:layout_height="65dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/cabin"
        android:text="@string/game_help"
        android:textAllCaps="false"
        android:textColor="@color/colorMainText"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameOptions"
        app:layout_constraintVertical_bias="0.507" />

    <ImageView
        android:id="@+id/gem_right"
        android:layout_width="200dp"
        android:layout_height="187dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/gem_right" />

    <ImageView
        android:id="@+id/gem_left"
        android:layout_width="200dp"
        android:layout_height="185dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/gem_left" />

</androidx.constraintlayout.widget.ConstraintLayout>